styles.css
*,
*:after,
*:before {
    box-sizing: border-box;
}

html,
body {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-color: hsl(0, 0%, 18%);
}

header {
    background-image: url('./photos/osrs.png');
    background-size: cover;
    height: 30vh;
    position: relative;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

.divider-text {
    display: inline-block;
    text-align: center;
}

.divider-text hr {
    margin: 0;
    border: 2px solid beige;
}

.divider-text p {
    margin: 0;
    margin-top: 0.2em;
}

header::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    /* black with 50% opacity */
    z-index: 1;
}

header * {
    position: relative;
    z-index: 2;
}

header p:last-child {
    text-transform: uppercase;
    font-weight: bold;
}

header h1 {
    font-size: 2rem;
    max-width: 80%;
}

header span {
    color: beige;
    text-shadow: 1px 1px 2px black;
}

header .divider-text,
header p:last-child {
    color: beige;
}

section {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 3em;
}

section h2 {
    font-size: 1.3rem;
}

.cta h2 {
    font-weight: bold;
}

.cta h2,
.cta p {
    margin: 0;
}

.cta p:first-of-type {
    color: beige;
}

.cta {
    margin-top: 2em;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #fff;
}

.cta p:last-child {
    margin-top: 1em;
    max-width: 80%;
    text-align: center;
    margin-bottom: 1.5em;
}

form {
    display: flex;
    flex-direction: column;
    max-width: 80%;
    gap: 0.5em;
}

label {
    color: #fff;
}

input {
    height: 4.5vh;
}

.btn {
    background: linear-gradient(90deg, rgba(245, 245, 219, 1) 0%, rgba(245, 245, 219, 1) 53%, rgba(255, 255, 168, 1) 100%);
    border: none;
    cursor: pointer;
    padding: 1em;
    color: black;
    font-weight: bold;
    text-transform: uppercase;
    margin-top: 0.5em;
}
form p:last-child {
    color: beige;
    text-align: center;
    font-size: 0.8em;
}

@media (min-width: 576px) {
    body {
        display: flex;
    }
    header {
        height: 100vh;
        width: 100vw;
    }
    section {
     justify-content: center;   
    }
}

